# ioAmp200W

./: .gitignore  LICENSE.txt  readme.md
App/: readme.md  test.c
board/: .gitignore  fp-lib-table  ioAmp200W.kicad_pcb  ioAmp200W.kicad_prl  ioAmp200W.kicad_pro  ioAmp200W.kicad_sch  sym-lib-table
board/CustomLibs/INA750BIREMR/: INA740BIREMR.kicad_mod  INA750BIREMR.dcm  INA750BIREMR.kicad_sym  INA750BIREMR.lib  INA750BIREMR.mod
board/CustomLibs/SN74AHCT245/KiCADv6/: 2025-11-03_18-42-18.kicad_sym
board/CustomLibs/TAD5112/KiCADv6/: TAD5112.bak  TAD5112.kicad_sym
board/CustomLibs/TAD5112IRGER_Mouser/: TAD5112IRGER.dcm  TAD5112IRGER.kicad_mod  TAD5112IRGER.kicad_sym  TAD5112IRGER.lib  TAD5112IRGER.mod
board/CustomLibs/TLV320AIC3254IRHBT/: IC_ADS125H01IRHBT.kicad_mod  TLV320AIC3254IRHBT.kicad_sym
board/CustomLibs/TPD4S480RUKR/KiCADv6/: 2025-10-03_14-06-17.kicad_sym
board/CustomLibs/TPS26750SRSMR/KiCADv6/: 2025-10-03_14-04-43.kicad_sym
board/CustomLibs/USB4105_GF_A_120/: GCT_USB4105-GF-A-120.kicad_mod  USB4105-GF-A-120.kicad_sym
board/CustomLibs/infineon-pcb-footprints-and-symbols-ma5332ms-integrated-class-d-audio-amplifier-ics-altium-pcbdesigndata-en/: IFX-PG-IQFN-42-1-V.PcbLib  MA5332MS.schlib  MA5332ms_sym.bak  MA5332ms_sym.kicad_sym
board/CustomLibs/ul_LM70660RRXR/KiCADv6/: 2026-03-30_22-52-45.kicad_sym
firmware/: .env  CMakeLists.txt  qbuild.sh  readme.md
firmware/SetupToolchainScripts/: setup.sh  setupWin.ps1
firmware/setupToolchain/: readme.md  setup.sh
firmware/src/: cdc_app.c  tusb_config.h  uac2_app.c  usb_descriptors.c  usb_descriptors.h
(+26 files in other folders)
